--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -154,3 +154,18 @@ gap: 20px;
     font-weight: 300;
     line-height: 1.8;
 }
+@media (max-width:600px) {
+    .main_bottom input{
+        flex: none;
+        width: 150px;
+    }
+    .main_bottom img{
+        width: 20px;
+    }
+    .search_box{
+        padding: 5px 10px;
+    }
+    .search_box div{
+        gap: 5px;
+    }
+}
